# loop-linter

./: LICENSE  README.md  TODO.md  loop-linter.cabal
docs/: design.adoc  design.html  documentation.adoc  documentation.html
src/LoopLinter/: Graph.hs  HasReg.hs  MapBuilder.hs  Plugin.hs  RegPrimitives.hs  Registry.hs  Utils.hs
test/: Main.hs
