cabal-version:      2.4
name:               loop-linter
version:            0.1.0.0

library
  exposed-modules:     LoopLinter.Plugin
  hs-source-dirs:      src
  other-modules:       
    LoopLinter.RegPrimitives
    LoopLinter.HasReg
  build-depends:
    base >= 4.14 && < 5,
    ghc
  default-language:   Haskell2010
